# cgwasm

./: Cargo.toml  flake.nix  rust-toolchain.toml
component/: Cargo.toml
component/src/: main.rs
src/: main.rs
