[package]
name = "cgwasm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["component"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = ["fs", "sched"] }
rlimit = "0.10"
tokio = { version = "1.42", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "time",
] }
wasmtime = { version = "27", features = ["pooling-allocator"] }
wasmtime-wasi = "27"
wasmtime-wasi-http = "27"
